<resources>
    <string name="app_name">My Family</string>
    <string name="action_settings">Configuración</string>
    <string name="usuario">Francisco Carrión</string>
    <string name="fragment1">Hola</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="opcion_noticias">Noticias</string>
    <string name="opcion_chat">Chat</string>
    <string name="opcion_mi_perfil">Mi Perfil</string>
    <string name="opcion_mi_familia">Mis Familiares</string>
    <string name="opcion_solicitudes">Solicitudes</string>
    <string name="opcion_buscar">Buscar</string>
    <string name="opcion_invitar">Invitar</string>
    <string name="opcion_ajustes">Ajustes</string>

    <string name="text_prueba">Texto de prueba para una carview tipo texto que se puede ver muy bien </string>
    <string name="usaurio_test">Sara Lemus</string>

    <string name="opcion_guardar">Guardar</string>
    <string name="opcion_ver_pub">Ver Publicación</string>
    <string name="opcion_no_ver_pub">No Querio Ver</string>

    <string name="opcion_ini_chat">Iniciar Chat</string>
    <string name="opcion_eliminar">Eliminar</string>
    <string name="opcion_ver_perfil">Ver Perfil</string>
    <string name="opcion_aceptar">Aceptar</string>

    <string name="bienvenida">Bienvenidos a</string>
    <string name="login">Iniciar Sesión</string>
    <string name="registro">¿Eres Nuevo? Registrese Aqui</string>
    <string name="logo">Logo</string>
    <string name="lb_email">Dirección de correo</string>
    <string name="lb_clave">Contraseña</string>
    <string name="btn_entrar">Ingresar</string>
    <string name="recuperar_contrasena">¿Olvidaste tu Contraseña?</string>
    <string name="txt_nombre">Nombre</string>
    <string name="primer_nombre">Primer Nombre</string>
    <string name="segundo_nombre">Segundo Nombre</string>
    <string name="primer_apellido">Primer Apellido</string>
    <string name="segundo_apellido">Segundo Apellido</string>
    <string name="rp_contrasena">Repetir Contraseña</string>
    <string name="txt_salir">Salir</string>
    <string name="btn_recuperar">Recuperar</string>
    <string name="txt_recuperar">Recuperar Contraseña</string>

    <string name="new_registro">Nuevo Registro</string>
    <string name="requerido">Esta campo es requerido</string>
    <string name="no_coinciden">Las Contraseñas no coinciden</string>
    <string name="error_email">Invalido email</string>
    <string name="error_user_exists">Ya existe un usuarios registrado con ese email</string>
    <string name="error_weak_password">La contraseña dada no es válida</string>
    <string name="error_invalid_credenciales">Contraseña invalida</string>
    <string name="search_familiar">Buscar Familiar</string>
    <string name="error_invalid_email">Correo no registrado</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

</resources>
