<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".RegistrarActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/new_registro"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/rg_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txt_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/rg_primer_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/primer_apellido"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/rg_segundo_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/segundo_apellido"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/rg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/lb_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/rg_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/lb_clave"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/rg_repite_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/rp_contrasena"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/primary_color"
        android:text="@string/registro"
        android:textColor="@color/blank_color" />

    <TextView
        android:id="@+id/txt_iniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <ProgressBar
        android:id="@+id/rg_progress_bar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</LinearLayout>