<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitXY"
        android:src="@drawable/familialogo" />

    <EditText
        android:id="@+id/lg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/lb_email"
        android:inputType="textEmailAddress"
        android:labelFor="@+id/textView9"
        android:paddingLeft="5dp" />

    <EditText
        android:id="@+id/lg_clave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:hint="@string/lb_clave"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:background="@color/primary_color"
        android:text="@string/btn_entrar"
        android:textColor="@color/blank_color" />

    <TextView
        android:id="@+id/txt_reset_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/recuperar_contrasena"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

</LinearLayout>