<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_recuperar"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/rc_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/lb_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btn_recuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:background="@color/primary_color"
        android:text="@string/btn_recuperar"
        android:textColor="@color/blank_color" />

    <TextView
        android:id="@+id/txt_rc_iniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:capitalize="words"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <ProgressBar
        android:id="@+id/rc_progress_bar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</LinearLayout>